[bug-fix] player did not fit mobile

--- a/public/babelbooapp/app.css
+++ b/public/babelbooapp/app.css
@@ -624,6 +624,12 @@ li.tag-selected {
     width: 100%;
 }
 
+.progress-cine {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    margin-top: 0px;
+}
 .title-cine, .progress-cine {
     font-size:22px;
     font-weight: bold;
@@ -632,6 +638,12 @@ li.tag-selected {
 
 .title-cine {
     color:#777;
+    position: relative;
+    min-height: 51px;
+}
+
+.title-cine .title {
+    margin-right: 2.5em;
 }
 
 player-card .cine {
@@ -652,13 +664,13 @@ player-card .title-cine p {
 }
 
 .player-container {
-    width: 640px;
+    width: 100%;
     height: 360px;
     background-color: #222;
     display: inline-block;
-    margin-left: 20px;
+    /*margin-left: 20px;
     padding-left: 0px;
-    padding-right: 0px;
+    padding-right: 0px;*/
 }
 
 .answer {
